Fix content stretch on long displays

--- a/resources/src/pages/division.styl
+++ b/resources/src/pages/division.styl
@@ -52,6 +52,8 @@
 section.division, section.page
   margin-top 70px
   align-items flex-start
+  justify-content flex-start
+  flex 1 0 auto
 
   .youtube-embed
     width 100%
