--- a/resources/src/pages/divisions.styl
+++ b/resources/src/pages/divisions.styl
@@ -1,10 +1,13 @@
 section.lobby
-    background-image url(divisions_page_bg) , url(divisions_page_top_bg)
+    background-image url(divisions_page_bg), url(divisions_page_top_bg)
     background-repeat no-repeat, repeat-x
     background-position top center
-    background-color #0c1318
+    background-color #0a0b10
     margin-top 40px
     min-height auto
+    flex 1 0 auto
+    align-items flex-start
+    justify-content flex-start
 
     .section-blurb
         text-align right
