--- a/resources/src/partials/elements.styl
+++ b/resources/src/partials/elements.styl
@@ -1,15 +1,20 @@
 *, *::before, *::after
   box-sizing border-box
 
-html, body
+html
   overflow-x hidden
   max-width 100vw
+  height 100%
 
 body
+  overflow-x hidden
+  max-width 100vw
   background-color body_background_color
   margin 0
   padding 0
-  height 100%
+  min-height 100%
+  display flex
+  flex-direction column
 
 ul, ol
   list-style none
@@ -249,7 +254,16 @@ a.call-to-action-button
         &.active a, &.current-menu-item a
           color #fff
 
+.main-content
+  flex 1 0 auto
+  display flex
+  flex-direction column
+
+  > section
+    flex 1 0 auto
+
 section.primary-footer
+  flex-shrink 0
   background url(footer_bg_image) no-repeat footer_section_bg_color center 0
   display block
   position relative
