--- a/resources/src/partials/media.styl
+++ b/resources/src/partials/media.styl
@@ -60,7 +60,7 @@
 
 @media (max-width: bp_desktop)
   .push
-    margin-top 500px
+    margin-top 700px
 
   section
     min-height auto
